# tufup-example-pyapp

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  .yamllint.yaml  README.md  main.old.spec  main.py  main.spec  metadata.yml  mise.toml  pyproject.toml  sample.config.json
.github/workflows/: cycle.yml  enforcer.yml
src/application/: __about__.py  config.py  main.py  manage.py
