[project]
name = "application"
dynamic = ["version"]
description = "Tufup Example Application"
readme = "README.md"
authors = [
    { name = "hasansezertasan", email = "hasansezertasan@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    # "platformdirs>=4.3.8",
    # "pydantic-settings>=2.9.1",
    "tufup>=0.9.0",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.1",
    "hatch>=1.14.1",
    "pyinstaller>=6.14.1",
    "pyinstaller-versionfile>=3.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/application/__about__.py"

[project.scripts]
application = "application.main:app"
manager = "application.manage:app"
