[project]
name = "application"
dynamic = ["version"]
description = "Tufup Example Application"
readme = "README.md"
authors = [
    { name = "hasansezertasan", email = "hasansezertasan@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.10.1",
    "platformdirs>=4.3.8",
    "tufup>=0.9.0",
    "typer>=0.16.0",
]


[dependency-groups]
dev = [
    "python-dotenv>=1.1.1",
    "hatch>=1.14.1",
    "pyinstaller>=6.14.1",
    "pyinstaller-versionfile>=3.0.1",
]


[project.scripts]
application = "application.main:app"
manager = "application.manage:app"


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[tool.hatch.version]
source = "vcs"


[tool.hatch.build]
hooks.vcs.version-file = "src/application/_version.py"
